# display_bytes

./: .gitignore  .travis.yml  Cargo.toml  LICENSE-MIT  README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: default_formats.rs
src/: base64.rs  hex.rs  lib.rs
