[package]
name = "display_bytes"
version = "0.2.1"
authors = ["Austin Bonander <austin.bonander@gmail.com>"]
license = "MIT OR Apache-2.0"

keywords = ["display", "bytes", "pretty", "print"]

description = "Human-readable display of byte sequences."
repository = "https://github.com/abonander/display_bytes"

[dependencies]
